# granite_chat

./: README.md  pyproject.toml
.github/workflows/: build-agent.yaml
src/beeai_agents/: agent.py
